@@ -1964,6 +1964,10 @@ extern "C" SQLRETURN SQL_API SQLRowCount(SQLHSTMT statementhandle,
 #include <sqlucode.h>
 #include <sqltypes.h>
 #include <stdlib.h>],[SQLConnectW(0,NULL,0,NULL,0,NULL,0);],[$ODBCSTATIC $ODBCINCLUDES],[$ODBCLIBS $SOCKETLIBS],[$LD_LIBRARY_PATH:$ODBCLIBSPATH],[AC_MSG_RESULT(yes); AC_DEFINE(HAVE_SQLCONNECTW,1,Some systems have SQLConnectW) ODBCUNICODE="yes"],[AC_MSG_RESULT(no)])
+		
+		AC_MSG_CHECKING(for SQLROWSETSIZE)
+		FW_TRY_LINK([#include <sql.h>
+#include <sqlext.h>],[SQLROWSETSIZE a;],[$ODBCSTATIC $ODBCINCLUDES],[$ODBCLIBS $SOCKETLIBS],[$LD_LIBRARY_PATH:$ODBCLIBSPATH],[AC_MSG_RESULT(yes); AC_DEFINE(HAVE_SQLROWSETSIZE,1,Some systems have SQLROWSETSIZE) ODBCUNICODE="yes"],[AC_MSG_RESULT(no)])
 	fi
 
 	if ( test -z "$ODBCLIBS" -o -z "$ODBCUNICODE" )
