@@ -38,6 +38,10 @@ typedef SQLLEN * NUMERICATTRIBUTETYPE;
 typedef SQLPOINTER NUMERICATTRIBUTETYPE;
 #endif
 
+#ifndef HAVE_SQLROWSETSIZE
+typedef SQLULEN SQLROWSETSIZE;
+#endif
+
 #define ODBC_INI "odbc.ini"
 
 //#define DEBUG_MESSAGES 1
