@@ -1,5 +1,6 @@
 0.50 - fixed sqlrserver-config script to return data for libsqlrserver
 		rather than libsqlrconnection
+	added test for SQLROWSETSIZE for odbc that doesn't define it
 
 0.49 - fixed various issues that came up when cross-compiling
 	fixed make uninstall to remove a few things that it missed
